--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "openchat",
+  "name": "openwachat",
   "version": "1.0.0",
   "author": {
     "name": "Bruno Martínez González"
@@ -14,6 +14,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.1.3",
     "next": "14.1.0",
+    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-dom": "^18"
   },
