--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "next": "14.1.0",
     "next-pwa": "^5.6.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-phone-number-input": "^3.3.9",
+    "tailwindcss-animated": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
